--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -9,14 +9,15 @@
     flex-wrap: nowrap;
     overflow-x: auto;
     justify-content: space-between;
-    /* Space out header buttons and menu button */
     align-items: center;
-    /* Vertically center the items */
-    /* random theme? */
     border-bottom: 2px solid orangered;
 }
 
-.header .header-buttons {
+header .title {
+    display: flex;
+    align-items: center;
+}
+.header .categories {
     display: flex;
     gap: 10px;
     flex-wrap: nowrap;
@@ -25,7 +26,7 @@
     /* Allow horizontal scrolling if necessary */
 }
 
-.header .header-buttons button {
+.header .categories button {
     white-space: nowrap;
     /* Prevent text from wrapping inside the buttons */
 }
@@ -36,7 +37,10 @@
     border: none;
     padding: 10px;
     cursor: pointer;
-    /* random theme? */
+    margin-right: 20px;
+    font-weight: bold;
+    font-size: 1.2em;
+    text-transform: uppercase;
     transition: background-color 0.3s;
 }
 
