--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,27 +1,34 @@
-
-html, body {
+html,
+body {
     min-height: 100vh;
     margin: 0;
     padding: 0;
 }
+
 body {
     font-family: 'Raleway', sans-serif;
     display: flex;
     flex-direction: column;
 }
+
 .container {
     display: flex;
     flex: 1;
     width: 100%;
-    overflow-y:auto;
+    overflow-y: auto;
     background-image: url('/assets/images/background.jpg');
     background-color: #ffa100;
+    background-size: cover;
+    background-attachment: fixed;
     /* background-size:1586px 1013px;  */
-    background-position:center;
-    background-repeat:no-repeat;
-    position: relative; /* Ensure the container is positioned relative to its pseudo-element */
-    z-index: 1; /* Ensure the content stays above the pseudo-element */
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+    /* Ensure the container is positioned relative to its pseudo-element */
+    z-index: 1;
+    /* Ensure the content stays above the pseudo-element */
 }
+
 /* .container::before {
     content: "";
     position: absolute;
@@ -40,9 +47,10 @@ footer {
     background-color: #333;
     color: #fff;
     padding: 10px 20px;
-    text-align: center;    
+    text-align: center;
     border-top: 2px solid orangered;
 }
+
 a {
     color: #ffa100;
     text-decoration: none;
@@ -71,6 +79,8 @@ main {
     padding: 20px;
     overflow-y: auto;
     min-width: 12rem;
+    border-top: 5px blue solid;
+    border-bottom: 5px blue solid;
 }
 
 main h2 {
@@ -114,7 +124,8 @@ main .code-block {
     z-index: 1;
     left: 50%;
     transform: translateX(-50%);
-    white-space: nowrap; /* Prevents text from wrapping */
+    white-space: nowrap;
+    /* Prevents text from wrapping */
     opacity: 0;
     transition: opacity 0.3s;
     font-family: 'Times New Roman', Times, serif;
