--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -13,14 +13,15 @@
 @media (max-width: 768px),
 (min-device-pixel-ratio: 2),
 (min-resolution: 192dpi) {
-
+    
     .container {
         flex-direction: column;
     }
 
     .sidebar {
         width: 100%;
-        min-width: none;
+        min-width: 100%;
+        max-width: 100%;
         height: auto;
         display: none;
         /* Hide sidebar by default */
