--- a/assets/css/markdown.css
+++ b/assets/css/markdown.css
@@ -103,7 +103,21 @@ pre code {
     color: #f8f8f2; /* Light text */
     overflow-x: auto;
 }
+blockquote {
+    background-color: #f9f9f9;
+    border-left: 5px solid #ccc;
+    margin: 1em 10px;
+    padding: 0.5em 10px;
+    font-size: 0.9em;
+    line-height: 1.5;
+}
+blockquote br {
+    line-height: 0;
+}
 
+blockquote p {
+    margin: 0.5em 0;
+}
 .centered-content img {
     display: block;
     margin: 10px auto;
@@ -164,3 +178,39 @@ pre code {
     color: #fff;
 }
 
+button {
+    margin-top: 10px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: 1px solid #555;
+    background-color: #333;
+    color: #fff;
+    font-size: 16px;
+    font-family: 'Arial', sans-serif;
+    cursor: pointer;
+    transition: border-color 0.3s, box-shadow 0.3s, background-color 0.3s, color 0.3s;
+}
+
+button:hover,
+button.code-container {
+    border-color: #fbbd08;
+    background-color: #444;
+    color: #fff;
+    box-shadow: 0 0 5px rgba(251, 189, 8, 0.5);
+    outline: none;
+}
+
+button:active {
+    background-color: #555;
+}
+.code-output {
+    background-color: #2d2d2d; /* Dark background */
+    color: #f8f8f2; /* Light text */
+    padding: 10px;
+    border-radius: 5px;
+    overflow-x: auto; /* Horizontal scrolling if necessary */
+    overflow-y: auto; /* Vertical scrolling */
+    max-height: 20em; /* Limit the height */
+    white-space: pre-wrap; /* Preserve formatting */
+    font-family: 'Courier New', Courier, monospace; /* Monospaced font */
+}
